# riskmatrix

./: .gitignore  setup.py
scratch/crypto-main/: .gitignore  README.md  pyproject.toml
scratch/crypto-main/data/: .gitattributes  compare_predictions.py  exclude_symbols.csv  read_data.py
scratch/crypto-main/notebook/: compare_boris_data.ipynb  dp_daily.ipynb  factor1_close.ipynb  factor_combination_linear.ipynb  factor_combination_xgb.ipynb  rolling_fit_factor_combine_linear.ipynb  test_by_boris.ipynb  tmp.ipynb  tmp2.ipynb
scratch/crypto-main/src/backtest/: backtest.py  config.py  factor_backtest_eval.ipynb  get_rolling_backtest_pnl.py  get_single_backtest_pnl.py  pnl_entry.py  run_backtest.py  tmp_single_test.py  utils.py
scratch/crypto-main/src/backtest/delist/: delist.ipynb  delist_info.csv
scratch/crypto-main/src/crypto_utils/: data_utils.py  eval_utils.py  factor_utils.py  time_utils.py
scratch/crypto-main/src/factor/: alpha101.py  calc_factor.ipynb  derive_factor.ipynb  factor_utils.py  pipeline_factor.py  position_factor.py  single_file_r_sqaure.py
scratch/crypto-main/src/gubo/: code1_get_alpha1.ipynb  code1_get_alpha2.ipynb  code2_backtest1.ipynb  code2_backtest2.ipynb
scratch/crypto-main/src/hft/: data_compress.py
scratch/crypto-main/src/hft/data_checker/: check_incremental.py  (+1 more)
scratch/crypto-main/src/hour_trade/: calc_hour_factor.ipynb  pure_fama.py
scratch/crypto-main/src/model/: xgb.py
scratch/crypto-main/src/production/: config.py  execution.py  fetch_data.py  position.py  run_backfill.sh  run_generation_prod.sh  run_prod_pipeline.py
(+21 files in other folders)
